01-07项目第7次提交，完成后台的登录部分,订单管理，商品管理，分类管理，还缺少商品管理的修改功能。

--- a/web/jsp/css/Style1.css
+++ b/web/jsp/css/Style1.css
@@ -212,10 +212,6 @@ A.eq:hover {
 	margin: 1px;
 	padding: 2px 4px 2px 10px;
 	border: 1px solid #8AA2CC;
-	background-attachment: fixed;
-	background-image: url(../images/button_ok.gif);
-	background-repeat: no-repeat;
-	background-position: left center;
 	color: #2F3F5B;
 	cursor: hand;
 	text-align: right;
@@ -231,10 +227,6 @@ A.eq:hover {
 	margin: 1px;
 	padding: 2px 4px 2px 10px;
 	border: 1px solid #8AA2CC;
-	background-attachment: fixed;
-	background-image: url(../images/button_cancel.gif);
-	background-repeat: no-repeat;
-	background-position: left center;
 	color: #2F3F5B;
 	cursor: hand;
 	text-align: right;
@@ -516,13 +508,13 @@ A.eq:hover {
 }
 .test 
 {
-	BACKGROUND-IMAGE: url(../images/aaa.gif); HEIGHT: 25px;
+	BACKGROUND-IMAGE: url(jsp/images/aaa.gif); HEIGHT: 25px;
 	
 }
 .optionOff 
 {
 	color:#909090;
-	background-image:url(../images/optionbgOff.gif);
+	background-image:url(jsp/images/optionbgOff.gif);
 	background-position:right;
 	background-repeat:no-repeat;
 	border-left:1px solid #a0a0a0;
@@ -532,7 +524,7 @@ A.eq:hover {
 }
 .optionOn {
 	color:#1E6BAE;
-	background-image:url(../images/optionbgOn.gif);
+	background-image:url(jsp/images/optionbgOn.gif);
 	background-position:right;
 	background-repeat:no-repeat;
 	border-left:1px solid #808080;
